[package]
name = "raspwarp"
version = "0.1.0"
authors = ["Arthur S <arstrini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
tokio = { version = "1.2.0", features = ["macros","rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
